Archive2/c5/06cf262ffdb813/output
main.cpp:6:7: error: expected ';' at end of member declaration
   Tp* allocate(std::size_t n);
       ^
main.cpp:6:28: error: expected ')' before 'n'
   Tp* allocate(std::size_t n);
                            ^
main.cpp:7:31: error: 'std::size_t' has not been declared
   void deallocate(Tp* p, std::size_t n);
                               ^
